Sticky Header with top logo

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,7 +1,7 @@
 <header id="gh-head" class="gh-head gh-outer">
     <div class="gh-head-inner">
         <div class="gh-head-brand">
-            <a class="gh-head-logo" href="{{@site.url}}">
+            <a class="gh-head-logo" href="#top">
                 {{#if @site.logo}}
                     <img src="{{@site.logo}}" alt="{{@site.title}}">
                 {{else}}
