--- a/default.hbs
+++ b/default.hbs
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,700&family=Mulish:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,700&display=swap">
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
+    <link rel="stylesheet" href="{{asset "css/custom.css"}}">
 
     <script>
         document.documentElement.style.setProperty('--inner-height', window.innerHeight + 'px');
@@ -17,7 +18,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}} is-head-brand{{^if @member.paid}}{{#is "home"}} is-home-cta{{/is}}{{/if}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
+<body class="{{body_class}} is-head-brand{{^if @member.paid}}{{#is "home"}} is-home-cta{{/is}}{{/if}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}" id="top">
     <div class="gh-site">
         {{^if @member.paid}}
             {{^is "home"}}
@@ -43,6 +44,7 @@
     {{/is}}
 
     <script src="{{asset "built/main.min.js"}}"></script>
+    <script src="{{asset "js/custom.js"}}"></script>
 
     {{ghost_foot}}
 </body>
