--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: var(--nav-height);
     top: 0;
+    z-index: 99999;
 }
 .scroll-down .gh-head {
     transform: translateY(-100px);
