--- a/home.hbs
+++ b/home.hbs
@@ -20,6 +20,7 @@
                     {{^if @member}}
                         <h2 class="gh-home-subscribe-title">{{@custom.cta_title}}</h2>
                         <p class="gh-home-subscribe-description">{{@custom.cta_description}}</p>
+                        <p class="counter"><strong>{{@custom.number_of_subscribers}}</strong> </p>
 
                         <a class="gh-home-subscribe-input" href="#/portal/signup" data-portal="signup">
                             jamie@example.com
