--- a/home.hbs
+++ b/home.hbs
@@ -23,7 +23,7 @@
                         <p class="counter"><strong>{{@custom.number_of_subscribers}}</strong> </p>
 
                         <a class="gh-home-subscribe-input" href="#/portal/signup" data-portal="signup">
-                            jamie@example.com
+                             Abundant Hedonium Collective
                             <span>{{> icons/arrow-right}}</span>
                         </a>
                     {{else}}
@@ -86,10 +86,12 @@
                     {{/foreach}}
                 </section>
 
+               {{!-- 
                 <div class="gh-home-latest-label">
                     <span class="gh-home-latest-indicator"></span>
                     Latest issue
                 </div>
+                --}}
             </div>
         </div>
     {{else}}
